--- a/css/estilo.css
+++ b/css/estilo.css
@@ -189,6 +189,6 @@
         font-family: 'Digital-7', sans-serif;
     }
 
-    #calculadora-hcode {
+    #calculadora-web {
         margin: 0 auto;
     } 
